<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/edit_text_bg"
            android:textSize="@dimen/edit_text_font_size"
            android:hint="@string/edt_hint_current_password"
            android:padding="@dimen/common_padding_regular"
            android:layout_marginHorizontal="@dimen/common_margin_max"
            android:layout_marginTop="@dimen/common_margin_max"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/edit_text_bg"
            android:textSize="@dimen/edit_text_font_size"
            android:hint="@string/edt_hint_new_password"
            android:padding="@dimen/common_padding_regular"
            android:layout_marginHorizontal="@dimen/common_margin_max"
            android:layout_marginTop="@dimen/common_margin_max"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/edit_text_bg"
            android:textSize="@dimen/edit_text_font_size"
            android:hint="@string/edt_hint_confirm__new_password"
            android:padding="@dimen/common_padding_regular"
            android:layout_marginHorizontal="@dimen/common_margin_max"
            android:layout_marginTop="@dimen/common_margin_max"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bt_height"
            android:background="@drawable/button_bg"
            android:layout_marginTop="@dimen/common_margin_max"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textSize="@dimen/bt_text_size"/>

    </LinearLayout>

</LinearLayout>